# ElasticDT

./: .gitignore  README.md  check_deps.sh  create_cluster.sh  delete_cluster.sh  helmfile.yaml  hostname.py  k8s-monitor-off.sh  k8s-monitor.sh  util.sh
Admin/: Dockerfile  build_admin.sh  deployment.yaml  root.bashrc  splash.sh
Infrastructure/: kind.yaml  traefik.yaml
Services/di/inv_mgmt/_src/: requirements.txt
Services/di/sensor_mqtt/: mosquitto-telegraf-1.0.0.tgz  values.yaml
Services/ds/: influxdb-1.0.0.tgz
Services/ds/influxdb/: Chart.yaml  values.yaml
Services/ds/mysql/: Chart.yaml
Services/ds/neo4j/: Chart.yaml  values.yaml
Services/ui/: grafana-1.0.0.tgz
Services/ui/cherrypy/: Dockerfile  deployment.yaml  webserver.py
Services/ui/grafana/: values.yaml
Services/ui/homepage/: values.yaml
Services/ui/homepage/_src/: Dockerfile  (+2 more)
Services_old/di/inv_mgmt/: Chart.yaml  values.yaml
Services_old/di/sensor_mqtt/: Chart.yaml  values.yaml
Services_old/ds/mysql/: values.yaml
Services_old/ui/grafana/: Chart.yaml  values.yaml
Services_old/ui/homepage/: Chart.yaml  values.yaml
helm-chart-maker/: README.md  pyproject.toml  stdin.example.txt
helm-chart-maker/helm_chart_maker/: __main__.py  chart_yaml_gen.py  cli.py  models.py  prompts.py  tty.py  yaml_gen.py
helm-chart-maker/helm_chart_maker/tests/all_defaults/: test_all_inputs_set.py
helm-chart-maker/helm_chart_maker/tests/all_inputs_set/: in.txt  test_all_inputs_set.py
helm-chart-maker/helm_chart_maker/tests/all_inputs_set/expected/: Chart.yaml
helm-chart-maker/templates/: deploy.yaml
(+39 files in other folders)
